Fix alignment of stream buttons

--- a/public/app/style.scss
+++ b/public/app/style.scss
@@ -524,7 +524,7 @@ cbus-episode {
       justify-content: center;
 
       > * {
-        max-width: 323px;
+        max-width: 282px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
